fix: enhance layout and styling across components for improved visibility and consistency

--- a/src/index.css
+++ b/src/index.css
@@ -459,12 +459,8 @@ header a:hover {
     min-height: 80vh;
 }
 
-@media (max-width: 576px) {
+@media (min-width: 576px) {
     .div-btn {
         width: 100px;
-    }
-
-    .div-btn .btn {
-        font-size: small;
     }
 }
